--- a/.env.stage.dev
+++ b/.env.stage.dev
@@ -3,4 +3,6 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=13741374
 DB_DATABASE=Bitdaan
-JWT_SECRET=XXXXXXX
+JWT_SECRET=XXXXX
+TOKEN=HUSSEIN
+JWT_TIME=120s
