--- a/.env.stage.prod
+++ b/.env.stage.prod
@@ -4,3 +4,5 @@ DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=Bitdaan
 JWT_SECRET=B[T@_6_-M2ux\^u),<7D9hsu99x.2-}bX_2bUXgnW?#5YT*cn$d{HjvBW^#Jfs]j
+TOKEN=HUSSEIN
+JWT_TIME=120s
